Style: Fixed overflow for map-container

--- a/src/App.scss
+++ b/src/App.scss
@@ -4252,7 +4252,7 @@ footer {
   .timeline,
   .table-top,
   .LanguageSwitcher {
-    width: calc(100% - 2rem);
+    width: calc(100% - 3rem);
   }
 
   .Home,
